@@ -1,2 +1,0 @@
-#!/bin/sh
-clasp $* | fmt -p v
